services/livekit-ingress/manifests/templates/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livekit-ingress-api
  namespace: livekit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - livekit-api.livekit-demo.cloudportal.app
      secretName: livekit-api-tls
  rules:
    - host: livekit-api.livekit-demo.cloudportal.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: livekit-ingress
                port:
                  number: 8080
